# oz_django

./: .gitignore  manage.py  pyproject.toml  temp.py  test.sh
.github/workflows/: ci.yml
oz_django/: asgi.py  settings.py  urls.py  wsgi.py
tabom/: models.py
tabom/migrations/: 0001_initial.py  0002_like_uix_user_id_article_id.py  0003_article_like_count.py
tabom/routers/: like_router.py
tabom/services/: article_service.py  like_service.py
tabom/tests/: test_article_service.py  test_auto_now.py  test_like_service.py
